[package]
name = "cargo-gitv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
cargo_metadata = "0.15.0"
chrono = "0.4.19"
clap = { version = "3.2.6", features = [ "derive" ] }
git2 = "0.14.3"
semver = "1.0.9"
