[package]
name = "cargo-gitv"
description = "Reasonable and opinionated version management based on Cargo and Git metadata."
version = "0.1.1"
authors = [ "Carsten Saathoff <carsten@kodemaniak.de"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/kodemaniak/cargo-gitv"
repository = "https://github.com/kodemaniak/cargo-gitv"
readme = "README.md"
categories = [ "development-tools:cargo-subcommand" ]
keywords = [ "cargo-subcommand", "release", "ci", "semantic-versions" ]
edition = "2021"
exclude = [
    ".github/",
    ".pre-commit-config.yaml" ,
    ".gitignore",
    "cliff.toml",
    "renovate.json"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.62"
cargo_metadata = "0.15.0"
chrono = "0.4.19"
clap = { version = "3.2.6", features = [ "derive" ] }
git2 = "0.14.4"
semver = "1.0.13"
