[package]
name = "cargo-gitv"
description = "Reasonable and opinionated version management based on Cargo and Git metadata."
version = "0.1.3"
authors = [ "Carsten Saathoff <carsten@kodemaniak.de"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/kodemaniak/cargo-gitv"
repository = "https://github.com/kodemaniak/cargo-gitv"
readme = "README.md"
categories = [ "development-tools::build-utils", "development-tools::cargo-plugins" ]
keywords = [ "cargo-subcommand", "release", "ci", "semantic-versions" ]
edition = "2021"
exclude = [
    ".github/",
    ".pre-commit-config.yaml" ,
    ".gitignore",
    "cliff.toml",
    "renovate.json"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.66"
cargo_metadata = "0.15.1"
chrono = "0.4.23"
clap = { version = "4.0.26", features = [ "derive" ] }
git2 = { version = "0.15.0", features = [ "vendored-libgit2" ] }
semver = "1.0.14"
